[Redesign] Fix up some high contrast and small screen bugs (#4209)
Fix bugs:
- https://github.com/NuGet/NuGetGallery/issues/4197 - Make install command wrap better on small screen and have a border on high contrast
- https://github.com/NuGet/NuGetGallery/issues/4195 - Give transient message on home page the right background color
- https://github.com/NuGet/NuGetGallery/issues/4178 - Hide circuit board triangles on high contrast
- https://github.com/NuGet/NuGetGallery/issues/4162 - Don't wrap package versions on package details and list page
- https://github.com/NuGet/NuGetGallery/issues/4147 - Make the hamburger icon visible on high contrast

--- a/src/Bootstrap/less/theme/base.less
+++ b/src/Bootstrap/less/theme/base.less
@@ -149,6 +149,10 @@ body {
   } 
 }
 
+.alert-transient-jumbotron {
+  background-color: #004880
+}
+
 .ms-Icon-ul {
   margin-left: 24px;
 
@@ -177,4 +181,9 @@ body {
 img.package-icon {
   margin-left: auto;
   margin-right: auto;
+}
+
+// Make the hamburger button visible on high contrast.
+.icon-bar {
+  border: 1px solid #fff;
 }
